--- a/Resume.html
+++ b/Resume.html
@@ -50,7 +50,7 @@
     <div class="resume">
         <div class="header">
             <div class="name">Binay-an,Raven Jay Suerte.</div>
-            <div class="contact">Email: opparavenjays@email.com </div>
+            <div class="contact">Email: opparavenjays@gmail.com </div>
         </div>
         
         <div class="section">
