--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <h1>my first website</h1>
 </head>
 <body>
-    <p>stastatastastastatast</p>
+    <p>stastatastastastatast</p> 
+    <p>static vooid main</p>
     
 </body>
 </html>
