organized with folder

--- a/FREECODECAMP/PhotoGallery/photogallery.html
+++ b/FREECODECAMP/PhotoGallery/photogallery.html
@@ -12,7 +12,7 @@
         </header>
         <div class="gallery">
             <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="">
-            <img src=https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="">
             <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="">
             <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="">
             <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="">
