finished building a quiz challange

--- a/FREECODECAMP/BuildingAQuiz.html
+++ b/FREECODECAMP/BuildingAQuiz.html
@@ -15,13 +15,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#student-info" id="student-info">INFO</a>
+                    <a href="#student-info" accesskey="s" id="student-info">INFO</a>
                 </li>
                 <li>
-                    <a href="#html-questions" id="html-questions">HTML</a>
+                    <a href="#html-questions" accesskey="s" id="html-questions">HTML</a>
                 </li>
                 <li>
-                    <a href="#css-questions" id="css-questions">CSS</a>
+                    <a href="#css-questions" accesskey="s" id="css-questions">CSS</a>
                 </li>
             </ul>
         </nav>
@@ -94,8 +94,36 @@
         </section>
         <section role="region" aria-labelledby="css-questions">
             <h2 id="css-questions">css</h2>
+            <div class="formrow">
+              <div class="question-block">
+                <label for="question1">is css a sheet?</label>
+              </div>
+              <div class="answer">
+                <select name="question1" id="question1" required>
+                  <option value="">Select an option</option>
+                  <option value="yes">Yes</option>
+                  <option value="no">No</option>
+                </select>
+              </div>
+              <div class="question-block">
+                <label for="question2">css is a cascadingsheet? true or false?</label>
+              </div>
+              <div class="answer">
+                <textarea name="question" id="question2" placeholder="this is a textarea" cols="30" rows="10"></textarea>
+                
+              </div>
+            </div>
         </section>
+        <button type="submit" accesskey="s">Send</button>
         </form>
     </main>
+    <footer>
+      <address>
+        <a href="https://freecodecamp.org">freeCodeCamp</a>
+        San Francisco<br />
+        California<br />
+        USA
+      </address>
+    </footer>
 </body>
 </html>
