--- a/FREECODECAMP/BuildingABalanceSheet.html
+++ b/FREECODECAMP/BuildingABalanceSheet.html
@@ -96,7 +96,25 @@
                         </tr>
                     </tbody>
                 </table>
-                <table></table>
+                <table>
+                   <caption>Net Worth</caption> 
+                   <thead>
+                        <tr>
+                            <td></td>
+                            <th><span class="sr-only">2019</span></th>
+                            <th><span class="sr-only">2020</span></th>
+                            <th><span class="sr-only">2021</span></th>
+                        </tr>
+                   </thead>
+                   <tbody>
+                        <tr class="total">
+                            <th>Total <span class="sr-only">Net Worth</span></th>
+                            <td class="current">$-171</td>
+                            <td class="current">$136</td>
+                            <td class="current">$334</td>
+                        </tr>    
+                   </tbody>
+                </table>
             </div>
         </section>
     </main>
