edited survey form css

--- a/FREECODECAMP/SurveyForm/SurveyForm.html
+++ b/FREECODECAMP/SurveyForm/SurveyForm.html
@@ -3,28 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="surveystyle.css">
   <title>Survey Form</title>
 </head>
 <body>
-  <style>
-    h1{
-      text-align: center;
-      color: white;
-    }
-    body{
-      color: white;
-      background-color: rgb(54, 49, 49);
-      text-align: center;
-    }
-    .descrption{
-      text-align: center;
-
-    }
-    div{
-      text-align: center;
-    }
-  </style>
+  
   <h1 id="title">Survey Form</h1>
 <div>
   <h3 id="description" class="descrption">Thank you for taking the time to help us improve the platform</h3>
