--- a/FREECODECAMP/BuildingACatPainting/BuildingACatPainting.html
+++ b/FREECODECAMP/BuildingACatPainting/BuildingACatPainting.html
@@ -7,6 +7,14 @@
     <title>fCC Cat Painting</title>
 </head>
 <body>
-    
+    <main>
+        <div class="cat-head">
+            <div class="cat-ears">
+                <div class="cat-left-ear"></div>
+                <div class="cat-right-ear"></div>
+            </div>
+        </div>
+        
+    </main>
 </body>
 </html>
