--- a/FREECODECAMP/BuildingACatPainting/BuildingACatPainting.html
+++ b/FREECODECAMP/BuildingACatPainting/BuildingACatPainting.html
@@ -10,9 +10,22 @@
     <main>
         <div class="cat-head">
             <div class="cat-ears">
-                <div class="cat-left-ear"></div>
-                <div class="cat-right-ear"></div>
+                <div class="cat-left-ear">
+                    <div class="cat-left-inner-ear"></div>
+                </div>
+                <div class="cat-right-ear">
+                    <div class="cat-right-inner-ear"></div>
+                </div> 
             </div>
+            <div class="cat-eyes">
+                <div class="cat-left-eye">
+                    <div class="cat-left-inner-eye"></div>
+                </div>
+                <div class="cat-right-eye">
+                    <div class="cat-right-inner-eye"></div>
+                </div>
+            </div>
+            <div class="cat-nose"></div>
         </div>
         
     </main>
