--- a/FREECODECAMP/SurveyForm/SurveyForm.html
+++ b/FREECODECAMP/SurveyForm/SurveyForm.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SurveyForm</title>
     <link rel="stylesheet" href="surveystyle.css" />
   </head>
   <body>
