updated html div and css building colors

--- a/FREECODECAMP/BuildingACitySkyLine/SkyLine.html
+++ b/FREECODECAMP/BuildingACitySkyLine/SkyLine.html
@@ -7,13 +7,22 @@
     <link rel="stylesheet" href="styles10.css">
 </head>
 <body>
+    
     <div class="background-buildings">
-        <div class="bb1">
+        <div></div>
+        <div></div>
+        <div class="bb1">     
             <div class="bb1a"></div>
             <div class="bb1b"></div>
             <div class="bb1c"></div>
             <div class="bb1d"></div>
         </div>
+        <div class="bb2"></div>
+        <div class="bb3"></div>
+        <div></div>
+        <div class="bb4"></div>
+        <div></div>
+        <div></div>
     </div>
 </body>
 </html>
