--- a/FREECODECAMP/Certification Project/TributePage/BruceLeeTributePage.html
+++ b/FREECODECAMP/Certification Project/TributePage/BruceLeeTributePage.html
@@ -15,7 +15,7 @@
     </header>
 
     <figure id="img-div">
-      <img id="image" src="https://i.ibb.co/C5Cmc17/hero.jpg" alt="Bruce Lee" />
+      <img class="picture" id="image" src="https://i.ibb.co/C5Cmc17/hero.jpg" alt="Bruce Lee" />
       
       <figcaption id="img-caption">
         Bruce Lee in the movie Enter the Dragon which would be his most famous film.
