--- a/FREECODECAMP/Responsive Web Design/BuildingACatPainting/BuildingACatPainting.html
+++ b/FREECODECAMP/Responsive Web Design/BuildingACatPainting/BuildingACatPainting.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles8.css">
+    <link rel="stylesheet" href="styles1/styles8.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fCC Cat Painting</title>
 </head>
