--- a/FREECODECAMP/Responsive Web Design/BuildingACitySkyLine/SkyLine.html
+++ b/FREECODECAMP/Responsive Web Design/BuildingACitySkyLine/SkyLine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City Skyline</title>
-    <link rel="stylesheet" href="styles10.css">
+    <link rel="stylesheet" href="styles1/styles10.css">
 </head>
 <body>
     
