--- a/FREECODECAMP/Responsive Web Design/BuildingAFerrisWheel/ferriswheel.html
+++ b/FREECODECAMP/Responsive Web Design/BuildingAFerrisWheel/ferriswheel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferris Wheel</title>
-    <link rel="stylesheet" href="styles12.css">
+    <link rel="stylesheet" href="styles/styles12.css">
 </head>
 <body>
     <div class="wheel">
