--- a/FREECODECAMP/Responsive Web Design/BuildingAMagazine/magazine.html
+++ b/FREECODECAMP/Responsive Web Design/BuildingAMagazine/magazine.html
@@ -6,7 +6,7 @@
     <title>Magazine</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <link rel="stylesheet" href="styles11.css">
+    <link rel="stylesheet" href="styles/styles11.css">
 </head>
 <body>
     <main>
