--- a/FREECODECAMP/Responsive Web Design/BuildingANutritionLabel/NutritionLabel.html
+++ b/FREECODECAMP/Responsive Web Design/BuildingANutritionLabel/NutritionLabel.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutrition Label</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" >
-    <link rel="stylesheet" href="styles5.css">
+    <link rel="stylesheet" href="styles/styles5.css">
 </head>
 <body>
     
