--- a/FREECODECAMP/Responsive Web Design/RegistrationForm/RegistrationForm.html
+++ b/FREECODECAMP/Responsive Web Design/RegistrationForm/RegistrationForm.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
-    <link rel="stylesheet" href="styles2.css" />
+    <link rel="stylesheet" href="styles/styles2.css" />
   </head>
   <body>
     <h1>Registration Form</h1>
