--- a/FREECODECAMP/Responsive Web Design/RothkoPainting/Rothko.html
+++ b/FREECODECAMP/Responsive Web Design/RothkoPainting/Rothko.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rothko Painting</title>
-    <link href="styles3.css" rel="stylesheet">
+    <link href="styles/styles3.css" rel="stylesheet">
   </head>
   <body>
     <div class="frame">
